# plotting

./: README.rst  pyproject.toml
docs/doctrees/: api.doctree  environment.pickle  index.doctree
docs/doctrees/api/: animations.doctree  axes.doctree  colors.doctree  easings.doctree  grids.doctree  labels.doctree  misc.doctree  saving.doctree  shapes.doctree  themes.doctree
docs/doctrees/examples/: example.doctree  example_helloworld.doctree  index.doctree  sg_execution_times.doctree
docs/html/: .buildinfo  api.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/html/_downloads/9a84168c36dfbb969526dd6e89eaa893/: example.ipynb
docs/html/_downloads/cf4bcfab27f996c9cfd51143359caf61/: example.py
docs/html/_sources/: index.rst.txt
docs/html/_sources/api/: colors.rst.txt  easings.rst.txt  labels.rst.txt  shapes.rst.txt
docs/html/_sources/examples/: example.rst.txt  index.rst.txt  (+1 more)
docs/html/api/: animations.html  axes.html  colors.html  easings.html  grids.html  labels.html  misc.html  saving.html  shapes.html  themes.html
docs/html/examples/: example.html  example_helloworld.html  index.html  sg_execution_times.html
docs_src/: api.rst  conf.py  index.rst
docs_src/api/: animations.rst  axes.rst  grids.rst  misc.rst  saving.rst  themes.rst
examples/: example.py
fplt/: __init__.py  animations.py  axes.py  colors.py  labels.py  misc.py  saving.py  shapes.py  themes.py
src/fplt/: __init__.py  axes.py  grids.py  misc.py  saving.py  shapes.py  style.py
src/fplt/experimental/: animations.py
